加了点小玩意

--- a/templates/index.html
+++ b/templates/index.html
@@ -755,6 +755,7 @@ with sync_playwright() as p:
             }
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
 </body>
 </html>
     
